crates/parser/tests/suite/snapshots/suite__statements__recipe_decl.snap
---
source: crates/parser/tests/suite/statements.rs
expression: "GlossqlParser ::\nparse_sql(\"DECLARE RECIPE segments ON fin FROM crm AS $$SELECT id, segment FROM customer_segments$$;\").expect(\"must parse\")"
---
[
    Declare(
        Recipe(
            RecipeDecl {
                table: Ident {
                    value: "segments",
                    quote_style: None,
                    span: Span(Location(1,16)..Location(1,24)),
                },
                dataset: Ident {
                    value: "fin",
                    quote_style: None,
                    span: Span(Location(1,28)..Location(1,31)),
                },
                source: Ident {
                    value: "crm",
                    quote_style: None,
                    span: Span(Location(1,37)..Location(1,40)),
                },
                settings: [],
                sql: "SELECT id, segment FROM customer_segments",
            },
        ),
    ),
]
