crates/parser/tests/suite/snapshots/suite__statements__relationship_decls.snap
---
source: crates/parser/tests/suite/statements.rs
assertion_line: 28
expression: "GlossqlParser ::\nparse_sql(\"DECLARE RELATIONSHIP orders.customer_id -> customers.id;\\nDECLARE RELATIONSHIP invoices.order_id <-> orders.id;\").expect(\"must parse\")"
---
[
    Declare(
        Relationship(
            RelationshipDecl {
                left: RelSide {
                    dataset: None,
                    table: Ident {
                        value: "orders",
                        quote_style: None,
                        span: Span(Location(1,22)..Location(1,28)),
                    },
                    columns: [
                        Ident {
                            value: "customer_id",
                            quote_style: None,
                            span: Span(Location(1,29)..Location(1,40)),
                        },
                    ],
                },
                op: ManyToOne,
                right: RelSide {
                    dataset: None,
                    table: Ident {
                        value: "customers",
                        quote_style: None,
                        span: Span(Location(1,44)..Location(1,53)),
                    },
                    columns: [
                        Ident {
                            value: "id",
                            quote_style: None,
                            span: Span(Location(1,54)..Location(1,56)),
                        },
                    ],
                },
            },
        ),
    ),
    Declare(
        Relationship(
            RelationshipDecl {
                left: RelSide {
                    dataset: None,
                    table: Ident {
                        value: "invoices",
                        quote_style: None,
                        span: Span(Location(2,22)..Location(2,30)),
                    },
                    columns: [
                        Ident {
                            value: "order_id",
                            quote_style: None,
                            span: Span(Location(2,31)..Location(2,39)),
                        },
                    ],
                },
                op: OneToOne,
                right: RelSide {
                    dataset: None,
                    table: Ident {
                        value: "orders",
                        quote_style: None,
                        span: Span(Location(2,44)..Location(2,50)),
                    },
                    columns: [
                        Ident {
                            value: "id",
                            quote_style: None,
                            span: Span(Location(2,51)..Location(2,53)),
                        },
                    ],
                },
            },
        ),
    ),
]
