crates/parser/tests/suite/snapshots/suite__statements__witness_decl_detector_only.snap
---
source: crates/parser/tests/suite/statements.rs
expression: "GlossqlParser ::\nparse_sql(\"DECLARE WITNESS reconciliation_w ON reconciliation DETECTOR reconcile_bands THRESHOLD 0.5;\").expect(\"must parse\")"
---
[
    Declare(
        Witness(
            WitnessDecl {
                name: Ident {
                    value: "reconciliation_w",
                    quote_style: None,
                    span: Span(Location(1,17)..Location(1,33)),
                },
                aspect: Ident {
                    value: "reconciliation",
                    quote_style: None,
                    span: Span(Location(1,37)..Location(1,51)),
                },
                speakers: [],
                detector: Some(
                    Ident {
                        value: "reconcile_bands",
                        quote_style: None,
                        span: Span(Location(1,61)..Location(1,76)),
                    },
                ),
                threshold: Some(
                    "0.5",
                ),
            },
        ),
    ),
]
